# SokoBARN

./: .gitignore  Cargo.toml  index.html  level.skb
assets/Levels/: Night-1.skb  Night-2.skb  Night-3.skb  Night-4.skb  Rain-1.skb  Rain-2.skb  Rain-3-WIP.skb  Rain-3.skb  Rain-4.skb  blank.skb  chicken-tutorial-1.skb  chicken-tutorial-2.skb  goat-tutorial-1.skb  goat-tutorial-2.skb  horse-tutorial-1.skb  horse-tutorial-2.skb  pig-tutorial-1.skb  pig-tutorial-2.skb
src/: game.rs  main.rs  menu.rs  simulation.rs  weather.rs
