[package]
name = "sokobarn"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.3", features = ["bevy_asset"] }
wasm-bindgen-test = "0.3"
serde = "1.0"
serde_json = "1.0"
bevy_common_assets = {version = "0.7", features = ["json"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[env]
CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER = "wasm-bindgen-test"