[package]
name = "sokobarn"
version = "1.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.11.3", features = ["bevy_asset"] }
wasm-bindgen-test = "0.3"
serde = "1.0"
serde_json = "1.0"
bevy_common_assets = {version = "0.7", features = ["json"] }
rand_core = "0.6"
bevy_rand = "0.3"
bevy_prng = { version = "0.1", features = ["rand_chacha"] }
bevy_pkv = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[env]
CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER = "wasm-bindgen-test"